// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index base 1`] = `
Object {
  "extends": Array [
    ":semanticCommits",
    ":semanticPrefixFix",
  ],
  "labels": Array [
    "maintenance",
  ],
  "lockFileMaintenance": Object {
    "automerge": true,
    "enabled": true,
    "semanticCommitType": "chore",
  },
  "packageRules": Array [
    Object {
      "automerge": true,
      "matchCurrentVersion": ">=1.0.0",
      "matchUpdateTypes": Array [
        "minor",
        "patch",
      ],
    },
  ],
  "semanticCommitScope": null,
}
`;

exports[`index lock file commit type 1`] = `
Object {
  "extends": Array [
    ":semanticCommits",
  ],
  "ignorePaths": Array [
    ".github/workflows/build.yml",
  ],
  "labels": Array [
    "maintenance",
  ],
  "lockFileMaintenance": Object {
    "enabled": true,
  },
  "packageRules": Array [
    Object {
      "depTypeList": Array [
        "dependencies",
        "devDependencies",
        "peerDependencies",
        "optionalDependencies",
      ],
      "semanticCommitType": "fix",
    },
  ],
  "semanticCommitScope": null,
}
`;

exports[`index lock file fix commit type 1`] = `
Object {
  "extends": Array [
    ":semanticCommits",
    ":semanticPrefixFix",
  ],
  "ignorePaths": Array [
    ".github/workflows/build.yml",
  ],
  "labels": Array [
    "maintenance",
  ],
  "lockFileMaintenance": Object {
    "automerge": true,
    "enabled": true,
  },
  "packageRules": Array [
    Object {
      "automerge": true,
      "matchCurrentVersion": ">=1.0.0",
      "matchUpdateTypes": Array [
        "minor",
        "patch",
      ],
    },
  ],
  "semanticCommitScope": null,
}
`;

exports[`index not base 1`] = `
Object {
  "extends": Array [
    ":semanticCommits",
    ":semanticPrefixFix",
  ],
  "ignorePaths": Array [
    ".github/workflows/build.yml",
  ],
  "labels": Array [
    "maintenance",
  ],
  "lockFileMaintenance": Object {
    "automerge": true,
    "enabled": true,
    "semanticCommitType": "chore",
  },
  "packageRules": Array [
    Object {
      "automerge": true,
      "matchCurrentVersion": ">=1.0.0",
      "matchUpdateTypes": Array [
        "minor",
        "patch",
      ],
    },
  ],
  "semanticCommitScope": null,
}
`;
